# dftidy

./: README.md  noxfile.py  pyproject.toml
dfclean/: clean.py  process_removes.py
dftidy/: __init__.py  cli.py  process_removes.py  tidy.py  validate_cfg.py
prompts/: dfclean_removes_prompt.txt  dfclean_validate_config.txt
samples/: README.md  config_sample.yaml  pyproject.toml  run_dftidy.py
tests/: conftest.py  test_clean.py  test_cli.py  test_init.py  test_process_removes.py  test_tidy.py  test_util.py  test_validate_cfg.py
