[tool.poetry]
name = "dftidy"
version = "0.1.2"
description = "Prepare a dataframe for ananlysis by renaming, removing and reordering columns"
authors = ["Andy Rappaport andy@rappaport.name"]
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/arappaport/dftidy"
repository = "https://github.com/arappaport/dftidy"
documentation = "https://github.com/arappaport/dftidy#readme"
keywords = ["dataframe", "tidying", "pandas", "cli", "dftidy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "dftidy" }]

# ---------------------------------------------------------------------------
# Runtime — installed for every consumer of the library.
# click is intentionally absent: the CLI is a dev convenience, not a library
# contract. Library consumers must not pay the click import cost.
# ---------------------------------------------------------------------------
[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"

# ---------------------------------------------------------------------------
# Dev group — local development, CI, and CLI usage only.
# ---------------------------------------------------------------------------
[tool.poetry.group.dev.dependencies]
click        = "^8.1"
pytest       = "^8.1"
pytest-cov   = "^5.0"
nox          = "^2024.3"
ruff         = "^0.4"
mypy         = "^1.10"
pandas-stubs = "^2.2"
pre-commit   = "^3.7"
pip-audit    = "^2.7"
tomli        = { version = "^2.0", python = "<3.11" }

# CLI entry point — only available after `poetry install --with dev`
# because click is dev-only. Library-only installs cannot run this command.
[tool.poetry.scripts]
dftidy = "dftidy.cli:main"

# ---------------------------------------------------------------------------
# ruff — linting + formatting in one tool.
# ANN enforces annotation completeness alongside mypy --strict.
# ANN101/102 (self/cls) are excluded — mypy handles those via --strict.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length    = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.isort]
known-first-party = ["dftidy"]

[tool.ruff.lint.per-file-ignores]
# pytest injects fixtures by name; ANN adds noise without value in test files.
"tests/*" = ["ANN"]

# ---------------------------------------------------------------------------
# mypy — strict mode with no escape hatches.
# pandas-stubs provides type information for all pandas APIs.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = false

# ---------------------------------------------------------------------------
# pytest — 80% branch-coverage floor; --tb=short keeps CI output scannable.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts   = "--cov=dftidy --cov-report=term-missing --cov-fail-under=82 --tb=short"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["dftidy"]
omit   = ["tests/*", "noxfile.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
